samples/_failures_safe/1761520021_dbe15d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57a11ab0.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_57a11ab0.c:180:5: error: expected expression at end of input
  180 |     for (int i = 0; i < graph->vertices; i++)
      |     ^~~
./samples/SAFE/__tmp_57a11ab0.c:180:5: error: expected declaration or statement at end of input
